--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,38 @@
 <html>
   <head>
     <title>Recurly.js example payment forms</title>
+    <link href="./style.css" rel="stylesheet" />
+    <style>
+      main {
+        margin-left: 20vmax;
+        margin-top: 4rem;
+      }
+
+      @media screen and (max-width: 640px) {
+        main {
+          width: auto;
+          margin-left: 3rem;
+        }
+      }
+    </style>
   </head>
   <body>
-    <ul>
-      <li><a href="minimal/index.html">Minimal billing information</a></li>
-      <li><a href="account-update/index.html">Account update</a></li>
-      <li><a href="advanced-pricing/index.html">Advanced pricing features</a></li>
-      <li><a href="advanced-pricing-items/index.html">Advanced pricing with items</a></li>
-      <li><a href="advanced-tax/index.html">Advanced tax features</a></li>
-      <li><a href="advanced-bank-account/index.html">Advanced bank account</a></li>
-      <li><a href="apple-pay/index.html">Apple Pay</a></li>
-      <li><a href="paypal/index.html">PayPal</a></li>
-      <li><a href="fraud-detection/recurly-kount.html">Fraud detection (Recurly and Kount direct integrations)</a></li>
-      <li><a href="fraud-detection/braintree.html">Fraud detection (Braintree integration)</a></li>
-      <li><a href="3d-secure/index.html">3-D Secure</a></li>
-      <li><a href="vue/index.html">Vue</a></li>
-    </ul>
+    <main>
+      <h1>Examples</h1>
+      <ul>
+        <li><a href="minimal/index.html">Minimal billing information</a></li>
+        <li><a href="account-update/index.html">Account update</a></li>
+        <li><a href="advanced-pricing/index.html">Advanced pricing features</a></li>
+        <li><a href="advanced-pricing-items/index.html">Advanced pricing with items</a></li>
+        <li><a href="advanced-tax/index.html">Advanced tax features</a></li>
+        <li><a href="advanced-bank-account/index.html">Advanced bank account</a></li>
+        <li><a href="apple-pay/index.html">Apple Pay</a></li>
+        <li><a href="paypal/index.html">PayPal</a></li>
+        <li><a href="fraud-detection/recurly-kount.html">Fraud detection (Recurly and Kount direct integrations)</a></li>
+        <li><a href="fraud-detection/braintree.html">Fraud detection (Braintree integration)</a></li>
+        <li><a href="3d-secure/index.html">3-D Secure</a></li>
+        <li><a href="vue/index.html">Vue</a></li>
+      </ul>
+    </main>
   </body>
 </html>
