--- a/public/advanced-pricing/index.html
+++ b/public/advanced-pricing/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Recurly.js Example: Advanced Pricing</title>
     <script src="https://js.recurly.com/v4/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/config"></script>
-    <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
-    <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link href="/style.css" rel="stylesheet" />
     <style>
       select, input { display: block; }
       input[type=radio] { display: inline; }
@@ -15,106 +17,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <form method="post" action="/api/subscriptions/new">
-      <label for="plan">Plan</label>
-      <select id="plan" data-recurly="plan">
-        <option value="simpleplan" selected>Simple Plan</option>
-        <option value="complexplan">Complex Plan</option>
-      </select>
+    <main>
+      <form method="post" action="/api/subscriptions/new">
+        <label for="plan">Plan</label>
+        <select id="plan" data-recurly="plan">
+          <option value="simpleplan" selected>Simple Plan</option>
+          <option value="complexplan">Complex Plan</option>
+        </select>
 
-      <label for="plan-quantity">Quantity</label>
-      <input type="text" data-recurly="plan_quantity" id="plan-quantity" value="2">
+        <label for="plan-quantity">Quantity</label>
+        <input type="text" data-recurly="plan_quantity" id="plan-quantity" value="2">
 
-      <div>
-        <div data-my-js-ref="recurly-element-card"></div>
-      </div>
+        <div>
+          <div data-my-js-ref="recurly-element-card"></div>
+        </div>
 
-      <div>
-        <label for="first_name">First Name</label>
-        <input type="text" data-recurly="first_name" id="first_name" name="first-name">
-      </div>
+        <div>
+          <label for="first_name">First Name</label>
+          <input type="text" data-recurly="first_name" id="first_name" name="first-name">
+        </div>
 
-      <div>
-        <label for="last_name">Last Name</label>
-        <input type="text" data-recurly="last_name" id="last_name" name="last-name">
-      </div>
+        <div>
+          <label for="last_name">Last Name</label>
+          <input type="text" data-recurly="last_name" id="last_name" name="last-name">
+        </div>
 
-      <label for="country">Country</label>
-      <select id="country" data-recurly="country">
-        <option value="US">United States</option>
-        <option value="GB">Great Britain</option>
-      </select>
-      <label for="postal_code">Postal Code</label>
-      <input type="text" data-recurly="postal_code" id="postal_code">
+        <label for="country">Country</label>
+        <select id="country" data-recurly="country">
+          <option value="US">United States</option>
+          <option value="GB">Great Britain</option>
+        </select>
+        <label for="postal_code">Postal Code</label>
+        <input type="text" data-recurly="postal_code" id="postal_code">
 
-      <p id="addons-title">Add-ons</p>
-      <p id="addons"></p>
+        <p id="addons-title">Add-ons</p>
+        <p id="addons"></p>
 
-      <p>Coupon</p>
-      <input type="text" data-recurly="coupon" value="test">
+        <p>Coupon</p>
+        <input type="text" data-recurly="coupon" value="test">
 
-      <input type="radio" value="USD" name="currency" data-recurly="currency" id="currency-USD" checked>
-      <label for="currency-USD">USD</label>
-      <input type="radio" value="GBP" name="currency" data-recurly="currency" id="currency-GBP">
-      <label for="currency-GBP">GBP</label>
+        <input type="radio" value="USD" name="currency" data-recurly="currency" id="currency-USD" checked>
+        <label for="currency-USD">USD</label>
+        <input type="radio" value="GBP" name="currency" data-recurly="currency" id="currency-GBP">
+        <label for="currency-GBP">GBP</label>
 
-      <input type="hidden" data-recurly="token" name="recurly-token">
+        <input type="hidden" data-recurly="token" name="recurly-token">
 
-      <p>
-        Due now
-      </p>
-      <ul>
-        <li>
-          Discount:
-          <span data-recurly="currency_symbol"></span>
-          <span data-recurly="discount_now"></span>
-        </li>
-        <li>
-          Subtotal:
-          <span data-recurly="currency_symbol"></span>
-          <span data-recurly="subtotal_now"></span>
-        </li>
-        <li>
-          Tax:
-          <span data-recurly="currency_symbol"></span>
-          <span data-recurly="taxes_now"></span>
-        </li>
-        <li>----</li>
-        <li>
-          Total:
-          <span data-recurly="currency_symbol"></span>
-          <span data-recurly="total_now"></span>
-        </li>
-      </ul>
-      <p>
-        Due later
-      </p>
-      <ul>
-        <li>
-          Discount:
-          <span data-recurly="currency_symbol"></span>
-          <span data-recurly="discount_next"></span>
-        </li>
-        <li>
-          Subtotal:
-          <span data-recurly="currency_symbol"></span>
-          <span data-recurly="subtotal_next"></span>
-        </li>
-        <li>
-          Tax:
-          <span data-recurly="currency_symbol"></span>
-          <span data-recurly="taxes_next"></span>
-        </li>
-        <li>----</li>
-        <li>
-          Total:
-          <span data-recurly="currency_symbol"></span>
-          <span data-recurly="total_next"></span>
-        </li>
-      </ul>
-      <button id="subscribe">Subscribe</button>
-      <div id="errors"></div>
-    </form>
+        <p>
+          Due now
+        </p>
+        <ul>
+          <li>
+            Discount:
+            <span data-recurly="currency_symbol"></span>
+            <span data-recurly="discount_now"></span>
+          </li>
+          <li>
+            Subtotal:
+            <span data-recurly="currency_symbol"></span>
+            <span data-recurly="subtotal_now"></span>
+          </li>
+          <li>
+            Tax:
+            <span data-recurly="currency_symbol"></span>
+            <span data-recurly="taxes_now"></span>
+          </li>
+          <li>----</li>
+          <li>
+            Total:
+            <span data-recurly="currency_symbol"></span>
+            <span data-recurly="total_now"></span>
+          </li>
+        </ul>
+        <p>
+          Due later
+        </p>
+        <ul>
+          <li>
+            Discount:
+            <span data-recurly="currency_symbol"></span>
+            <span data-recurly="discount_next"></span>
+          </li>
+          <li>
+            Subtotal:
+            <span data-recurly="currency_symbol"></span>
+            <span data-recurly="subtotal_next"></span>
+          </li>
+          <li>
+            Tax:
+            <span data-recurly="currency_symbol"></span>
+            <span data-recurly="taxes_next"></span>
+          </li>
+          <li>----</li>
+          <li>
+            Total:
+            <span data-recurly="currency_symbol"></span>
+            <span data-recurly="total_next"></span>
+          </li>
+        </ul>
+        <button id="subscribe">Subscribe</button>
+        <div id="errors"></div>
+      </form>
+    </main>
+
     <script>
       // Configure recurly.js -- set this to your own public key
       recurly.configure(window.recurlyConfig.publicKey);
