--- a/public/vue/index.html
+++ b/public/vue/index.html
@@ -1,67 +1,61 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Recurly.js Example: Minimal Billing Information with Vue</title>
     <script src="https://js.recurly.com/v4/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/config"></script>
-    <link
-      href="https://js.recurly.com/v4/recurly.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link href="/minimal/style.css" rel="stylesheet" />
+    <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link href="/style.css" rel="stylesheet" />
     <script src="https://unpkg.com/vue"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <div id="vue">
-      <template>
-        <section class="price">
-          <h1>$10 monthly</h1>
-        </section>
-        <section v-if="error" class="errors">
-          The following fields appear to be invalid: {{ error.fields.join(', ') }}
-        </section>
-        <section>
-          <div>
-            <form
-              @submit.prevent="submit"
-              ref="form"
-              method="post"
-              action="/api/subscriptions/new"
-            >
-              <div ref="card-element" class="card-element"></div>
-              <div>
-                <label for="first_name">First Name</label>
-                <input
-                  type="text"
-                  data-recurly="first_name"
-                  id="first_name"
-                  name="first-name"
-                />
-              </div>
-              <div>
-                <label for="last_name">Last Name</label>
-                <input
-                  type="text"
-                  data-recurly="last_name"
-                  id="last_name"
-                  name="last-name"
-                />
-              </div>
-              <input type="hidden" data-recurly="token" name="recurly-token" />
-              <button>Subscribe</button>
-            </form>
-          </div>
-        </section>
-      </template>
-    </div>
+    <main>
+      <div id="vue">
+        <template>
+          <section class="price">
+            <h1>$10 monthly</h1>
+          </section>
+          <section v-if="error" class="errors">
+            The following fields appear to be invalid: {{ error.fields.join(', ') }}
+          </section>
+          <section>
+            <div>
+              <form
+                @submit.prevent="submit"
+                ref="form"
+                method="post"
+                action="/api/subscriptions/new"
+              >
+                <div ref="card-element" class="card-element"></div>
+                <div>
+                  <label for="first_name">First Name</label>
+                  <input
+                    type="text"
+                    data-recurly="first_name"
+                    id="first_name"
+                    name="first-name"
+                  />
+                </div>
+                <div>
+                  <label for="last_name">Last Name</label>
+                  <input
+                    type="text"
+                    data-recurly="last_name"
+                    id="last_name"
+                    name="last-name"
+                  />
+                </div>
+                <input type="hidden" data-recurly="token" name="recurly-token" />
+                <button>Subscribe</button>
+              </form>
+            </div>
+          </section>
+        </template>
+      </div>
+    </main>
 
     <script>
       new Vue({
