--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
         <li><a href="fraud-detection/braintree.html">Fraud detection (Braintree integration)</a></li>
         <li><a href="3d-secure/index.html">3-D Secure</a></li>
         <li><a href="vue/index.html">Vue</a></li>
+        <li><a href="simon-plus/index.html">Simon+</a></li>
       </ul>
     </main>
   </body>
