Style simon+ index.html

--- a/public/simon-plus/index.html
+++ b/public/simon-plus/index.html
@@ -29,15 +29,48 @@
         <div>
           <fieldset class="plans">
             <div>
-              <div tabindex="0" class="plan sc-dphlzf dHbCjA"><input id="MONTH-0" type="radio" aria-checked="false" name="subscribeOptions" role="radio" class="plan-select sc-epGmkI gXkExL" value="MONTH" checked=""><label aria-labelledby="MONTH-0" for="MONTH-0" class="sc-bJHhxl vVxKs"><span><p class="sc-gzVnrw cSBsCl" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Monthly</p><div color="grey7" class="sc-dnqmqq fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$7.99</div></span><div class="radio-check"><div class="sc-fQkuQJ hvCPQO"><svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="sc-chPdSV sFNPE" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;"><path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="sc-kAzzGY dGwULW"></path></svg></div></div></label></div>
-              <div tabindex="0" class="plan sc-dphlzf dHbCjA"><input id="YEAR-1" type="radio" aria-checked="true" name="subscribeOptions" role="radio" class="plan-select sc-epGmkI gXkExL" value="YEAR"><label aria-labelledby="YEAR-1" for="YEAR-1" class="sc-bJHhxl vVxKs"><span><p class="sc-gzVnrw cSBsCl" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Annual</p><div color="grey7" class="sc-dnqmqq fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$79.99</div></span><div class="sc-TuwoP radio-check"><div class="sc-fQkuQJ hvCPQO"><svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="sc-chPdSV sFNPE" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;"><path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="sc-kAzzGY dGwULW"></path></svg></div></div></label>
+              <div tabindex="0" class="plan sc-dphlzf dHbCjA">
+                <input id="MONTH-0" type="radio" aria-checked="false" name="subscribeOptions" role="radio" class="plan-select sc-epGmkI gXkExL" value="MONTH" checked="">
+                <label aria-labelledby="MONTH-0" for="MONTH-0" class="sc-bJHhxl vVxKs">
+                  <span><p class="sc-gzVnrw cSBsCl" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Monthly</p>
+                    <div color="grey7" class="sc-dnqmqq fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$7.99</div>
+                  </span>
+                  <div class="radio-check">
+                    <div class="sc-fQkuQJ hvCPQO">
+                      <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="sc-chPdSV sFNPE" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
+                        <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="sc-kAzzGY dGwULW"></path>
+                      </svg>
+                    </div>
+                  </div>
+                </label>
+              </div>
+              <div tabindex="0" class="plan sc-dphlzf dHbCjA">
+                <input id="YEAR-1" type="radio" aria-checked="true" name="subscribeOptions" role="radio" class="plan-select sc-epGmkI gXkExL" value="YEAR">
+                <label aria-labelledby="YEAR-1" for="YEAR-1" class="sc-bJHhxl vVxKs">
+                  <span><p class="sc-gzVnrw cSBsCl" style="color: rgb(249, 249, 249); letter-spacing: initial; line-height: 1.53; font-family: Avenir-Heavy, sans-serif; font-size: 15px; margin: 0px; max-width: inherit;">Annual</p>
+                    <div color="grey7" class="sc-dnqmqq fine-print" style="color: rgb(202, 202, 202); margin: 0px;">$79.99</div>
+                  </span>
+                  <div class="sc-TuwoP radio-check">
+                    <div class="sc-fQkuQJ hvCPQO">
+                      <svg alt="" aria-hidden="true" aria-label="radioCheck" color="white" role="img" version="1.1" viewBox="2 2 20 20" xmlns="http://www.w3.org/2000/svg" class="sc-chPdSV sFNPE" style="height: 20px; min-width: 20px; width: 20px; z-index: auto;">
+                        <path d="M8.861 14.443a.962.962 0 0 1-.687-.289l-2.566-2.622a.962.962 0 0 1 1.375-1.346l1.783 1.822 4.17-5.708a.962.962 0 1 1 1.537 1.158L9.63 14.06a.962.962 0 0 1-.769.383z" class="sc-kAzzGY dGwULW"></path>
+                      </svg>
+                    </div>
+                  </div>
+                </label>
               </div>
             </div>
           </fieldset>
           <fieldset class="payment-types">
-            <div>
-              <div aria-label="Credit Card" role="radio" aria-checked="true" tabindex="0" class="payment-type"><input id="credit-radio-icon" type="radio" aria-checked="true" name="paymentOptions" role="radio" class="payment-type-select credit-card" value="CREDIT" checked=""><label aria-labelledby="credit-radio-icon" for="credit-radio-icon" class="sc-bSbAYC hyOFEv"><span><i class="icon" role="img"></i>Credit Card</span></label></div>
-              <div aria-label="PayPal" role="radio" aria-checked="false" tabindex="0" class="payment-type"><input id="paypal-radio-icon" type="radio" aria-checked="false" name="paymentOptions" role="radio" class="payment-type-select paypal" value="PAYPAL"><label aria-labelledby="paypal-radio-icon" for="paypal-radio-icon" class="sc-bSbAYC hyOFEv"><span><i class="icon" role="img"></i>PayPal</span></label></div>
+            <div class="fine-print">
+              <div aria-label="Credit Card" role="radio" aria-checked="true" tabindex="0" class="payment-type">
+              <input id="credit-radio-icon" type="radio" aria-checked="true" name="paymentOptions" role="radio" class="payment-type-select credit-card" value="CREDIT" checked="">
+                <label aria-labelledby="credit-radio-icon" for="credit-radio-icon" class="sc-bSbAYC hyOFEv">
+                  <span><i class="icon" role="img"></i>Credit Card</span>
+                </label>
+              </div>
+              <div aria-label="PayPal" role="radio" aria-checked="false" tabindex="0" class="payment-type">
+              <input id="paypal-radio-icon" type="radio" aria-checked="false" name="paymentOptions" role="radio" class="payment-type-select paypal" value="PAYPAL"><label aria-labelledby="paypal-radio-icon" for="paypal-radio-icon" class="sc-bSbAYC hyOFEv"><span><i class="icon" role="img"></i>PayPal</span></label></div>
             </div>
           </fieldset>
         </div>
